--- a/index.html
+++ b/index.html
@@ -39,17 +39,11 @@ nav > ul > li > a {
     text-decoration: none;
 }
 html{
-	/* This image will be displayed fullscreen */
 	background:url('index/source/images/background.jpg') no-repeat center center;
-
-	/* Ensure the html element always takes up the full height of the browser window */
 	min-height:100%;
-
-	/* The Magic */
 	background-size:cover;
 }
 body{
-	/* Workaround for some mobile browsers */
 	min-height:100%;
 }
 </style>
@@ -57,7 +51,7 @@ body{
 <meta name="description" content="Welcome to my site, we have cookies">
 <meta name="keywords" content="pikadude, pikadude01, teamminepixel, team minepixel, tm, pikabot01, pika, dude">
 </head>
-<body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size:cover;">
+<body>
 <!--Hey! What do you think you're looking at, huh?-->
 <nav>
 <ul>
