--- a/earthquake.html
+++ b/earthquake.html
@@ -8,7 +8,7 @@
 <audio id="audio" autoplay="autoplay" loop="" style="display: none;"></audio>
 <style>
   html{
-	background:url('earthquake/source/images/background.png') no-repeat center center;
+	background:url('earthquake/source/images/background.jpg') no-repeat center center;
 	min-height:100%;
 	position:absolute
 	background-size:cover;
