--- a/earthquake.html
+++ b/earthquake.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>*shakes violently*</title>
+<!--I BROKE IT DAMMIT ARGH!!-->
 <link rel="stylesheet" type="text/css" href="earthquake/source/scripts/csshake.min.css">
 <link rel="icon" href="earthquake/source/images/icon.ico">
 <script src="earthquake/source/scripts/music.js"></script>
@@ -10,7 +11,7 @@
   html{
 	background:url('earthquake/source/images/background.jpg') no-repeat center center;
 	min-height:100%;
-	position:absolute
+	position:absolute;
 	background-size:cover;
 }
 body{
