--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -80,6 +80,8 @@ body{
 <p style="font-family: 'DejaVuSerif';">PikaBot01 can do various things, from small games, memes and gambling to slapping, chatting, generating images and even more! For a full list go <a href="commands.html">here</a>.</p>
 <h2 style="font-family: 'DejaVuSerif';">How can I get PikaBot01 on my server?</h2>
 <p style="font-family: 'DejaVuSerif';">Type '>join' or '>invite' in a server that the bot already is on or click <a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot">here</a>.</p>
+<h2 style="font-family:'DejaVuSerif';">Why is PikaBot01 always offline?</h2>
+<p style="font-family:'DejaVuSerif';">PikaBot01 is only online when I am online as it is home hosted. However I am planning to purchase a VPS which will host the bot 24 hours a day.</p>
 <h2 style="font-family: 'DejaVuSerif';">PikaBot's Official Discord Server</h2>
 <iframe src="https://discordapp.com/widget?id=185970479134146560&theme=light" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 <script id="_wau1rc">var _wau = _wau || [];
