--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -209,6 +209,12 @@ body{
     <td>Coins Command</td>
   </tr>
   <tr>
+    <td>Gamble Prizes</td>
+    <td>View The Prizes To >gamble</td>
+	<td>>gamble prizes</td>
+    <td>Coins Command</td>
+  </tr>
+  <tr>
     <td>AsciiMemes</td>
     <td>All commands to do with Ascii Memes!</td>
 	<td>>asciimemes<br>>asciimemes random<br>>asciimemes kappa</td>
