--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -280,6 +280,12 @@ body{
 	<td>>cat</td>
     <td>Random Image Command</td>
   </tr>
+  <tr>
+    <td>Osu</td>
+    <td>Gets information about the specified Osu user.</td>
+	<td>>osu UserName<br>>osu PikaDude</td>
+    <td>Osu Command</td>
+  </tr>
 </table>
   <br>
   <a href="https://discord.gg/012P7BEh4fzkryZ6P" style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">If you need any help, feel free to visit the Official PikaBot01 Discord Server!</a>
