--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -286,6 +286,12 @@ body{
 	<td>>osu UserName<br>>osu PikaDude</td>
     <td>Osu Command</td>
   </tr>
+  <tr>
+    <td>Gif</td>
+    <td>Displays a gif based on the specified keywords</td>
+	<td>>gif Keyword<br>>gif Pikachu</td>
+    <td>Single Command</td>
+  </tr>
 </table>
   <br>
   <a href="https://discord.gg/012P7BEh4fzkryZ6P" style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">If you need any help, feel free to visit the Official PikaBot01 Discord Server!</a>
