--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -281,9 +281,15 @@ body{
     <td>Random Image Command</td>
   </tr>
   <tr>
-    <td>Osu</td>
+    <td>Osu User</td>
     <td>Gets information about the specified Osu user.</td>
-	<td>>osu UserName<br>>osu PikaDude</td>
+	<td>>osu user UserName<br>>osu user PikaDude</td>
+    <td>Osu Command</td>
+  </tr>
+  <tr>
+    <td>Osu</td>
+    <td>Gets information about the specified Osu beatmap.</td>
+	<td>>osu beatmap BeatmapId<br>>osu beatmap 128320</td>
     <td>Osu Command</td>
   </tr>
   <tr>
