added some commands

--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -51,7 +51,7 @@ th, td {
     padding: 5px;
 }
 html{
-	background:url('source/images/background.png') no-repeat center center;
+	background:url('source/images/background.jpg') no-repeat center center;
 	min-height:100%;
 	background-size:cover;
 }
@@ -297,6 +297,24 @@ body{
     <td>Displays a gif based on the specified keywords</td>
 	<td>>gif Keyword<br>>gif Pikachu</td>
     <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Weather</td>
+    <td>Displays the weather for the given country, city, postcode, etc.</td>
+	<td>>weather Sydney</td>
+    <td>Weather Command</td>
+  </tr>
+  <tr>
+    <td>Status</td>
+    <td>Sends statistical information about the bot</td>
+	<td>>status</td>
+    <td>Bot Command</td>
+  </tr>
+  <tr>
+    <td>Changelog</td>
+    <td>Displays the latest changelog</td>
+	<td>>changelog</td>
+    <td>Bot Command</td>
   </tr>
 </table>
   <br>
