--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -44,13 +44,8 @@ li a:hover:not(.active) {
     background-color: #0066ff;
 }
 html{
-	/* This image will be displayed fullscreen */
-	background:url('source/images/background.png') no-repeat center center;
-
-	/* Ensure the html element always takes up the full height of the browser window */
+	background:url('source/images/background.jpg') no-repeat center center;
 	min-height:100%;
-
-	/* The Magic */
 	background-size:cover;
 }
 body{
