--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -63,6 +63,7 @@ body{
   <li><a class="active" href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
   <li><a href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
   <li><a href="https://discord.gg/012P7BEh4fzkryZ6P" style="font-family: 'DejaVuSerif'">Support</a></li>
+  <li><a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot" style="font-family: 'DejaVuSerif'">Add PikaBot01 To Your Server</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
 <img style="margin: 0px auto; display:block" src="source/images/PikaBot01.jpg" alt="PikaBot01" width="128" height="128" align="top"></img>
