--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -306,7 +306,7 @@ body{
     <td>Weather Command</td>
   </tr>
   <tr>
-    <td>Status</td>
+    <td>Stats</td>
     <td>Sends statistical information about the bot</td>
 	<td>>status</td>
     <td>Bot Command</td>
