--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -228,14 +228,9 @@ body{
     <td>Single Command</td>
   </tr>
   <tr>
-    <td>Poll</td>
-    <td>Shows the weekly poll!</td>
-	<td>>poll<br>>poll [subcommand]</td>
-    <td>Poll Command</td>
-  </tr>
   <tr>
     <td>Call</td>
-    <td>Call a random server to talk! (Like Omegle)</td>
+    <td>Call a server to talk! (Like Omegle)</td>
 	<td>>call</td>
     <td>Call Command</td>
   </tr>
@@ -274,12 +269,6 @@ body{
     <td>Bans the specified user</td>
 	<td>>ban @ReallyAnnoyingGuy</td>
     <td>Moderation Command</td>
-  </tr>
-  <tr>
-    <td>Cat</td>
-    <td>Displays a random cat gif (a bit slow at the moment)</td>
-	<td>>cat</td>
-    <td>Random Image Command</td>
   </tr>
   <tr>
     <td>Osu User</td>
