--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -305,6 +305,12 @@ body{
 	<td>>changelog</td>
     <td>Bot Command</td>
   </tr>
+  <tr>
+    <td>Pabts</td>
+    <td>Displays Help For Don't Shit Your Pants</td>
+	<td>>pants<br>>pants play<br>>pants look around</td>
+    <td>Pants Command</td>
+  </tr>
 </table>
   <br>
   <a href="https://discord.gg/012P7BEh4fzkryZ6P" style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">If you need any help, feel free to visit the Official PikaBot01 Discord Server!</a>
