--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -306,8 +306,8 @@ body{
     <td>Bot Command</td>
   </tr>
   <tr>
-    <td>Pabts</td>
-    <td>Displays Help For Don't Shit Your Pants</td>
+    <td>Pants</td>
+    <td>Displays help for the remake of the game Don't Shit Your Pants</td>
 	<td>>pants<br>>pants play<br>>pants look around</td>
     <td>Pants Command</td>
   </tr>
