--- a/test.html
+++ b/test.html
@@ -3,19 +3,37 @@
 <head>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script>
-$(document).ready(function(){
-    $("button").click(function(){
-        $.getJSON("http://128.199.142.235/test.json", function(result){
-            $.each(result, function(i, field){
-                $("div").append(field + " ");
-            });
-        });
-    });
-});
+function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+}
+var userid2 = getParameterByName('id');
+function readTextFile(file)
+{
+    var rawFile = new XMLHttpRequest();
+    rawFile.open("GET", file, false);
+    rawFile.onreadystatechange = function ()
+    {
+        if(rawFile.readyState === 4)
+        {
+            if(rawFile.status === 200 || rawFile.status == 0)
+            {
+                var allText = rawFile.responseText;
+                alert(allText);
+            }
+        }
+    }
+    rawFile.send(null);
+}
+var result = readTextFile("http://128.199.142.235/pokemon/caught/" + userid2 + ".txt");
+window.alert(result);
 </script>
 </head>
 <body>
-<button>Get JSON data</button>
-<div></div>
 </body>
 </html>
