--- a/pokemon.html
+++ b/pokemon.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+</head>
+<body>
+<p id="caught"></p>
 <script>
 function getParameterByName(name, url) {
     if (!url) url = window.location.href;
@@ -24,16 +27,13 @@ function readTextFile(file)
             if(rawFile.status === 200 || rawFile.status == 0)
             {
                 var allText = rawFile.responseText;
-                alert(allText);
+				document.getElementById("caught").innerHTML = allText;
             }
         }
     }
     rawFile.send(null);
 }
-var result = readTextFile("http://128.199.142.235/pokemon/caught/" + userid2 + ".txt");
-window.alert(result);
+var caught = readTextFile("http://128.199.142.235/pokemon/caught/" + userid2 + ".txt");
 </script>
-</head>
-<body>
 </body>
 </html>
