pokemon stats wip

--- a/PikaBot01/pokemon/profile.html
+++ b/PikaBot01/pokemon/profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script src="/source/scripts/get.js"></script>
+<script src="get.js"></script>
 </head>
 <body>
 <p id="caught"></p>
