--- a/PikaBot01/profile.html
+++ b/PikaBot01/profile.html
@@ -1,88 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script src="source/scripts/get.js"></script>
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="source/materialize/materialize.min.css"  media="screen,projection"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
 @font-face {
   font-family: 'Joystix';
   src: url('source/fonts/joystix.ttf');
 }
 @font-face {
-  font-family: 'DejaVuSerif';
-  src: url('source/fonts/DejaVuSerif.ttf');
+  font-family: 'Roboto';
+  src: url('source/fonts/Roboto.ttf');
 }
-body {margin:0;}
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.dimScreen
+{
+    position:fixed;
+    padding:0;
+    margin:0;
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #4d4d4d;
-    position: fixed;
-    bottom: 0;
+    top:0;
+    left:0;
+
     width: 100%;
+    height: 100%;
+    background-color: white;
 }
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover:not(.active) {
-    background-color: #262626;
-}
-
-.active {
-    background-color: #0066ff;
-}
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-html{
-	background:url('source/images/background.jpg') no-repeat center center;
-	min-height:100%;
-	background-size:cover;
-}
-body{
-	min-height:100%;
+.LOADIN
+{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 </style>
+<div id="imBLIND" class="dimScreen">
+  <div id="tableload" class="progress LOADIN" style="width: 90%; margin:10px auto;">
+      <div id="tableprogress" class="determinate" style="width: 0%"></div>
+  </div>
+</div>
 <link rel="icon" href="source/images/icon.ico">
 <meta name="description" id="description">
-<a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
-</head>
+<a class="waves-effect waves-light btn" style="margin: 2px 2px;"><i class="material-icons left">info</i>Back To Index</a></head>
 <body>
-<ul>
-  <li><a href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
-  <li><a href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
-  <li><a href="https://discord.gg/012P7BEh4fzkryZ6P" style="font-family: 'DejaVuSerif'">Support</a></li>
-  <li><a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot" style="font-family: 'DejaVuSerif'">Add PikaBot01 To Your Server</a></li>
-</ul>
-<h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'" id="name"></h1>
-<img style="margin: 0px auto; display:block" id="avatar" alt="Avatar" width="128" height="128" align="top"></img>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script type="text/javascript" src="source/materialize/materialize.min.js"></script>
+<script src="source/scripts/get.js"></script>
+<script src="source/scripts/search.js"></script>
+<script src="source/scripts/cri.js"></script>
+  <div class="fixed-action-btn horizontal click-to-toggle noselect" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large red">
+      <i title="Click to open the menu" class="tooltipped material-icons" data-position="top" data-delay="200" data-tooltip="Menu">menu</i>
+    </a>
+    <ul>
+      <li><a href="home.html" title="Home" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Home">home</i></a></li>
+      <li><a href="commands.html" title="Command List" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Command List">list</i></a></li>
+      <li><a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot" title="Add PikaBot01 To Your Server" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Add PikaBot01 To Your Server">add</i></a></li>
+      <li><a href="https://discord.gg/012P7BEh4fzkryZ6P" title="Join PikaBot01's Official Discord Server" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Join PikaBot01's Official Discord Server">chat</i></a></li>
+	  <li><a onclick="swag()" title="Profile (Beta)" class="btn-floating red"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Profile (Beta)">account_box</i></a></li>
+    </ul>
+  </div>
+<ul id="fancy">
+<li style="opacity: 0">
+<div style="text-align: center;">
+<span style="font-size:350%; font-family: 'Roboto'" id="name"></span>
+<span style="font-size:10px; font-family: 'Roboto'">Beta</span>
+</div>
+<img style="margin: 0px auto; display:block" id="avatar" width="128" height="128" align="top"></img>
 <title id="title"></title>
-<p style="display:inline-block"></p>
-<table style="width:98%;" align="center">
-<tr><th>Coin/Gamble Stats</th></tr>
+<br>
+<h2 style="margin: 2px 2px; font-family: 'Roboto'">Stats Table</h2>
+<div id="table">
+<table class="bordered highlight">
+<thead><tr><th>Coin/Gamble Stats</th></tr></thead>
+<tbody>
 <tr><td>Coins Balance</td><td id="coinsbal"></td></tr>
 <tr><td>Gamble Count</td><td id="gamblecount"></td></tr>
-<tr><th>Pokemon Stats</th></tr>
+</tbody>
+<thead><tr><th title="This feature isn't available for public use yet..">Pokemon Stats [Beta]</th></tr></thead>
+<tbody>
 <tr><td>Pokemon Caught</td><td id="caught"></td></tr>
 <tr><td>Pokeballs</td><td id="pokeballs"></td></tr>
+</tbody>
 </table>
+</div>
+<p style="margin: 2px 2px; font-family: 'Roboto'" >Note: Not all stats will update instantly</p>
+</li>
+</ul>
 <br>
 <br>
 <br>
@@ -90,5 +101,7 @@ body{
 <br>
 <br>
 <br>
+</ul>
+</li>
 </body>
 </html>
