New Look! Profiles! I'll work on it more later though

--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -38,10 +38,10 @@
     </a>
     <ul>
       <li><a href="home.html" title="Home" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Home">home</i></a></li>
-      <li><a href="commands.html" title="Command List" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Command List">list</i></a></li>
+      <li><a href="commands.html" title="Command List" class="btn-floating red"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Command List">list</i></a></li>
       <li><a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot" title="Add PikaBot01 To Your Server" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Add PikaBot01 To Your Server">add</i></a></li>
       <li><a href="https://discord.gg/012P7BEh4fzkryZ6P" title="Join PikaBot01's Official Discord Server" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Join PikaBot01's Official Discord Server">chat</i></a></li>
-	  <li><a onclick="swag()" title="Profile (Beta)" class="btn-floating red"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Profile (Beta)">account_box</i></a></li>
+	  <li><a onclick="swag()" title="Profile (Beta)" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Profile (Beta)">account_box</i></a></li>
     </ul>
   </div>
 <h1 style="text-align:center; font-size:350%; font-family: 'Roboto'">PikaBot01</h1>
