New Look! Profiles! I'll work on it more later though

--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -284,6 +284,12 @@
 	<td>>pants<br>>pants play<br>>pants look around</td>
     <td>Pants Command</td>
   </tr>
+  <tr>
+    <td>Profile</td>
+    <td>Sends a link to your profile (Beta)</td>
+	<td>>profile</td>
+    <td>Bot Command</td>
+  </tr>
 </table>
   <br>
   <a href="https://discord.gg/012P7BEh4fzkryZ6P" style="text-align:center; font-size:175%; font-family: 'Roboto'">If you need any help, feel free to visit the Official PikaBot01 Discord Server!</a>
