--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -32,6 +32,7 @@
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script type="text/javascript" src="source/materialize/materialize.min.js"></script>
 <script src="source/scripts/search.js"></script>
+<script src="source/scripts/2scroll.js"></script>
   <div class="fixed-action-btn horizontal click-to-toggle noselect" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large red">
       <i title="Click to open the menu" class="tooltipped material-icons" data-position="top" data-delay="200" data-tooltip="Menu">menu</i>
@@ -44,18 +45,27 @@
 	  <li><a onclick="swag()" title="Profile (Beta)" class="btn-floating blue"><i class="material-icons tooltipped" data-position="top" data-delay="200" data-tooltip="Profile (Beta)">account_box</i></a></li>
     </ul>
   </div>
+<ul id="topbitthing">
+<li style="opacity: 0">
 <h1 style="text-align:center; font-size:350%; font-family: 'Roboto'">PikaBot01</h1>
 <img style="margin: 0px auto; display:block" src="source/images/PikaBot01.jpg" alt="PikaBot01" width="128" height="128" align="top"></img>
 <p style="text-align:center; font-size:175%; font-family: 'Roboto'">A Bot For <a href="http://discordapp.com"><img src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="top"></img></a></h1>
+</li>
+</ul>
 <br>
 <br>
-<table style="width:100%">
+<ul id="table">
+<li style="opacity: 0">
+<table style="width:100%" class="bordered striped">
+<thead>
   <tr>
     <th>Command</th>
     <th>Description</th>
 	<th>Usage/Example</th>
     <th>Category</th>
   </tr>
+  </thead>
+  <tbody>
   <tr>
     <td>Help</td>
     <td>Displays information about the bot.</td>
@@ -290,9 +300,14 @@
 	<td>>profile</td>
     <td>Bot Command</td>
   </tr>
+  </tbody>
 </table>
+</li>
   <br>
+  <li>
   <a href="https://discord.gg/012P7BEh4fzkryZ6P" style="text-align:center; font-size:175%; font-family: 'Roboto'">If you need any help, feel free to visit the Official PikaBot01 Discord Server!</a>
+  </li>
+  </ul>
   <br>
   <br>
   <br>
