--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -56,6 +56,7 @@
 <h2 style="font-family: 'Roboto';">How can I get PikaBot01 on my server?</h2>
 <p style="font-family: 'Roboto';">Type '>join' or '>invite' in a server that the bot already is on or click <a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot">here</a>.</p>
 <h2 style="font-family: 'Roboto';">PikaBot's Official Discord Server</h2>
-<iframe src="https://discordapp.com/widget?id=185970479134146560&theme=light" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+<div >
+<iframe style="margin: 0 auto; display:block;" src="https://discordapp.com/widget?id=185970479134146560&theme=light" width="1000" height="500" allowtransparency="true" frameborder="0"></iframe>
 </body>
 </html>
