--- a/index.html
+++ b/index.html
@@ -1,77 +1,98 @@
-<!DOCTYPE html>
 <html>
 <head>
+<script id="_wau9mt">var _wau = _wau || [];
+_wau.push(["tab", "y1w7z6ggbp1z", "9mt", "left-lower"]);
+(function() {var s=document.createElement("script"); s.async=true;
+s.src="//widgets.amung.us/tab.js";
+document.getElementsByTagName("head")[0].appendChild(s);
+})();</script>
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="index/source/materialize/materialize.min.css"  media="screen,projection"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>PikaDude - Home</title>
-<meta name=viewport content="width=device-width, initial-scale=1">
 <style>
 @font-face {
-  font-family: 'Pixelex';
-  src: url('index/source/fonts/pixelex.ttf');
+  font-family: 'Roboto';
+  src: url('index/source/fonts/Roboto.ttf');
 }
-@font-face {
-  font-family: 'Joystix';
-  src: url('index/source/fonts/joystix.ttf');
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-  body{
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
+.text {
+color: white;
+text-align: center;
+-webkit-text-stroke: 1px #000066;
+  text-shadow:
+    3px 3px 0 #000066,
+   -1px -1px 0 #000066,  
+    1px -1px 0 #000066,
+   -1px  1px 0 #000066,
+    1px  1px 0 #000066;
 }
-nav {
-    background-color: #000099;
-    margin: 0;
-    overflow: hidden;
-}
-nav ul{
-    margin: 0;
-    padding: 0;
-}
-nav ul li {
-    display: inline-block;
-    list-style-type: none;
-}
-nav > ul > li > a {
-    color: #aaa;
-    background-color:#000099;
-    display: block;
-    line-height: 2em;
-    padding: 0.5em 0.5em;
-    text-decoration: none;
-}
-html{
-	background:url('index/source/images/background.jpg') no-repeat center center;
-	min-height:100%;
-	background-size:cover;
-}
-body{
-	min-height:100%;
+html { 
+  background: url(index/source/images/background.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
 <meta name="description" content="Welcome to my site, we have cookies">
-<meta name="keywords" content="pikadude, pikadude01, teamminepixel, team minepixel, tm, pikabot01, pika, dude">
+<meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
 </head>
 <body>
-<!--Hey! What do you think you're looking at, huh?-->
-<nav>
-<ul>
-<li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
-<li><a href="PikaBot01/home.html" style="font-family: 'Joystix'">PikaBot01</a></li>
-<li><a href="TeamMinepixel.html" style="font-family: 'Joystix'">Team Minepixel</a></li>
-<li><a href="Twitch.html" style="font-family: 'Joystix'">Twitch</a></li>
-<li><a href="YouTube.html" style="font-family: 'Joystix'">YouTube</a></li>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script type="text/javascript" src="index/source/materialize/materialize.min.js"></script>
+<script type="text/javascript" src="index/source/scripts/wew.js"></script>
+<script type="text/javascript" src="index/source/scripts/memes.js"></script>
+<ul id="links" class="dropdown-content">
+  <li><a href="http://twitch.tv/pikadude01">Twitch</a></li>
+  <li><a href="https://www.youtube.com/channel/UC80tQvTMQuawbweof9FYF4A">YouTube</a></li>
+  <li><a href="https://github.com/PikaDude">GitHub</a></li>
 </ul>
-</nav>
-<h1 style="text-align:center; font-size:350%; font-family: 'Joystix'">PikaDude's Website</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Joystix'">Programmer, Gamer, YouTuber and Twitch Streamer</p>
-<p style="text-align:center; font-size:175%; font-family: 'Joystix'">Direct yourself using the buttons above</p>
-<img style="margin: 0px auto; display:block" src="index/source/images/pika.png" alt="PikaDude" height="200" width="200" >
-<!--This code below makes the final product code look so messy-->
-<script id="_wau1rc">var _wau = _wau || [];
-_wau.push(["tab", "wrw1764086j4", "1rc", "left-middle"]);
-(function() {var s=document.createElement("script"); s.async=true;
-s.src="http://widgets.amung.us/tab.js";
-document.getElementsByTagName("head")[0].appendChild(s);
-})();</script>
+<ul id="lonks" class="dropdown-content">
+  <li><a href="http://twitch.tv/pikadude01">Twitch</a></li>
+  <li><a href="https://www.youtube.com/channel/UC80tQvTMQuawbweof9FYF4A">YouTube</a></li>
+  <li><a href="https://github.com/PikaDude">GitHub</a></li>
+</ul>
+  <nav class="noselect">
+    <div class="nav-wrapper" style="background: #000066;">
+      <a href="http://pikadude.xyz" class="brand-logo"><i class="material-icons left">videogame_asset</i>PikaDude's Website</a>
+	  <a data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+	    <li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
+        <li><a href="PikaBot01/home.html"><i class="material-icons left">settings</i>PikaBot01</a></li>
+        <li><a class="dropdown-button" data-activates="links"><i class="material-icons left">add_circle_outline</i>Links</a></li>
+		<li><a><i class="material-icons left">directions_walk</i><!-- BEGIN: Powered by Supercounters.com --><script type="text/javascript" src="http://widget.supercounters.com/texthit.js"></script><script type="text/javascript">var sc_texthit_var = sc_texthit_var || [];sc_text_hit(1291258,"Views","#ffffff");</script><br><noscript><a href="http://www.supercounters.com">Tumblr Hit Counter</a></noscript><!-- END: Powered by Supercounters.com --></a></li>
+      </ul>
+	  <ul class="side-nav" id="mobile-demo">
+	  	<li><a href="http://pikadude.xyz" style="background: white; color: orange"><i class="material-icons left">home</i>Home</a></li>
+	    <li><a href="PikaBot01/home.html"><i class="material-icons left">settings</i>PikaBot01</a></li>
+        <li><a class="dropdown-button" data-activates="lonks"><i class="material-icons left">add_circle_outline</i>Links</a></li>
+	  </ul>
+    </div>
+  </nav>
+<br>
+<br>
+<br>
+<br>
+<p class="text" style="font-size:500%" align="center">PikaDude</p>
+<p class="text" style="font-size:200%" align="center">A.K.A PikaDude01, Pikachu Dude!</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="http://widget.supercounters.com/tab.js"></script><script type="text/javascript">var sc_tab_var = sc_tab_var || [];sc_tab(1291258,"left","lower")</script><br><noscript><a href="http://www.supercounters.com/">Tumblr Online Counter</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+<a class="text" id="count"></a>
 </body>
 </html>
