--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <script id="_wau9mt">var _wau = _wau || [];
@@ -50,6 +51,7 @@ html {
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script type="text/javascript" src="index/source/materialize/materialize.min.js"></script>
 <script type="text/javascript" src="index/source/scripts/wew.js"></script>
+<script type="text/javascript" src="index/source/scripts/memes.js"></script>
 <ul id="links" class="dropdown-content">
   <li><a href="http://twitch.tv/pikadude01">Twitch</a></li>
   <li><a href="https://www.youtube.com/channel/UC80tQvTMQuawbweof9FYF4A">YouTube</a></li>
@@ -63,15 +65,21 @@ html {
   <nav class="noselect">
     <div class="nav-wrapper" style="background: #000066;">
       <a href="http://pikadude.xyz" class="brand-logo"><i class="material-icons left">videogame_asset</i>PikaDude's Website</a>
-	  <a data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+	  <a data-activates="mobile-demo" class="button-collapse" style="cursor: pointer;"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
 	    <li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
         <li><a href="PikaBot01/home.html"><i class="material-icons left">settings</i>PikaBot01</a></li>
         <li><a class="dropdown-button" data-activates="links"><i class="material-icons left">add_circle_outline</i>Links</a></li>
-		<li><a><i class="material-icons left">directions_walk</i><!-- BEGIN: Powered by Supercounters.com --><script type="text/javascript" src="http://widget.supercounters.com/texthit.js"></script><script type="text/javascript">var sc_texthit_var = sc_texthit_var || [];sc_text_hit(1291258,"Views","#ffffff");</script><br><noscript><a href="http://www.supercounters.com">Tumblr Hit Counter</a></noscript><!-- END: Powered by Supercounters.com --></a></li>
+		<li><a href="http://www.supercounters.com/stats/1291258"><!-- BEGIN: Powered by Supercounters.com -->
+<center>
+<script type="text/javascript" src="http://widget.supercounters.com/texthit.js"></script><script type="text/javascript">var sc_texthit_var = sc_texthit_var || [];sc_text_hit(1291258,"Views","#ffffff");</script><i class="material-icons left">directions_walk</i><br><noscript><a href="http://www.supercounters.com">Tumblr Hit Counter</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+</a>
+</li>
       </ul>
 	  <ul class="side-nav" id="mobile-demo">
-	  	<li><a href="http://pikadude.xyz" style="background: white; color: orange"><i class="material-icons left">home</i>Home</a></li>
+	  	<li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
 	    <li><a href="PikaBot01/home.html"><i class="material-icons left">settings</i>PikaBot01</a></li>
         <li><a class="dropdown-button" data-activates="lonks"><i class="material-icons left">add_circle_outline</i>Links</a></li>
 	  </ul>
