--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -53,6 +53,6 @@
 <p style="font-family: 'Roboto';">Type '>join' or '>invite' in a server that the bot already is on or click <a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot">here</a>.</p>
 <h2 style="font-family: 'Roboto';">PikaBot's Official Discord Server</h2>
 <div >
-<iframe style="margin: 0 auto; display:block;" src="https://discordapp.com/widget?id=185970479134146560&theme=light" width="1000" height="500" allowtransparency="true" frameborder="0"></iframe>
+<iframe align="center" style="margin: 0 auto; display:block;" src="https://discordapp.com/widget?id=185970479134146560&theme=light" width="1000" height="500" allowtransparency="true" frameborder="0"></iframe>
 </body>
 </html>
