--- a/404.html
+++ b/404.html
@@ -17,6 +17,6 @@
 <br>
 <br>
 <br>
-<a href="index.html" title="nah mate, i don't shake">Back To Index</a>
+<a href="http://pikadude.xyz" title="nah mate, i don't shake">Back To Index</a>
 </body>
 </html>
