--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -20,7 +20,7 @@
 }
 </style>
 <link rel="icon" href="source/images/icon.ico">
-<a class="waves-effect waves-light btn" style="margin: 2px 2px;"><i class="material-icons left">info</i>Back To Index</a></head>
+<a href="http://pikadude.xyz" class="waves-effect waves-light btn" style="margin: 2px 2px;"><i class="material-icons left">arrow_back</i>Back To Index</a></head>
 <meta name="description" content="The official homepage of PikaBot01. What else did you expect this to say?!">
 <meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
 </head>
