--- a/PikaBot01/profile.html
+++ b/PikaBot01/profile.html
@@ -73,7 +73,7 @@ background: rgba(255, 255, 255, 0.5);
 </div>
 <link rel="icon" href="source/images/icon.ico">
 <meta name="description" id="description">
-<a class="waves-effect waves-light btn" style="margin: 2px 2px;"><i class="material-icons left">info</i>Back To Index</a></head>
+<a href="http://pikadude.xyz" class="waves-effect waves-light btn" style="margin: 2px 2px;"><i class="material-icons left">arrow_back</i>Back To Index</a></head>
 <body>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script type="text/javascript" src="source/materialize/materialize.min.js"></script>
