--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="index/source/materialize/materialize.min.css"  media="screen,projection"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>PikaDude - Home</title>
+<title>PikaDude - About Me</title>
 <style>
 @font-face {
   font-family: 'Roboto';
@@ -41,9 +41,10 @@ html {
 <meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
 </head>
 <body>
-<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script type="text/javascript" src="index/source/scripts/jquery.js"></script>
 <script type="text/javascript" src="index/source/materialize/materialize.min.js"></script>
 <script type="text/javascript" src="index/source/scripts/wew.js"></script>
+<script type="text/javascript" src="index/source/scripts/woosh.js"></script>
 <script type="text/javascript" src="index/source/scripts/memes.js"></script>
 <ul id="links" class="dropdown-content">
   <li><a href="http://twitch.tv/pikadude01">Twitch</a></li>
@@ -82,10 +83,33 @@ html {
 <br>
 <br>
 <br>
-<p class="text" style="font-size:500%" align="center">PikaDude</p>
-<p class="text" style="font-size:200%" align="center">A.K.A PikaDude01, Pikachu Dude!</p>
+<p class="text" style="font-size:500%" align="center">About Me</p>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<ul id="woah1">
+<li style="opacity: 0">
+<div style="margin: auto auto; background: green">
+<p class="text" style="font-size:200%">Who Am I?</p>
+<p class="text">My name is PikaDude, I am a developer and gamer. You probably haven't heard of me until now.</p>
+</div>
+</li>
+</ul>
+<br>
+<br>
+<br>
+<ul id="woah2">
+<li style="opacity: 0">
+<div style="margin: auto auto; background: green;">
+<p class="text" style="font-size:200%">My Hobbies</p>
+<p class="text">Aside from programming, playing games and talking to random people on the internet, I also play guitar as I am also a musician.</p>
+</div>
+</li>
+</ul>
 <br>
 <br>
 <br>
